.kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sisbgview-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: sisbg.policiacivil.go.gov.br
spec:
  tls:
    - hosts:
        - sisbg-homo.policiacivil.go.gov.br
        - sisbg.policiacivil.go.gov.br
      secretName: certificado-pc
  rules:
    - host: sisbg-homo.policiacivil.go.gov.br
      http:
        paths:
          - path: /
            backend:
              serviceName: sisbgview-service
              servicePort: 80
